# ksz-lae-xcorr

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
configs/: fiducial.yaml  lae_surveys.yaml
configs/variants/: quicktest.yaml
data/: README.md
notebooks/exploratory/: README.md  kSZ_LAE_lightcone_plotter_and_SNR_notebook_6Jul2026.py  replot_lightcone.py
pbs/: pbs_coeval.sh  submit_all_seeds.sh
scripts/: 01_run_coeval_seed.py  02_stitch_lightcones.py  03_make_type_b_grids.py  04_compute_xcorr.py  05_compute_snr.py  06_make_figures.py  07_stitch_lae_value_fields.py  08_compute_realistic_snr.py
src/ksz_lae_xcorr/correlation/: auto_power.py  cross_correlation.py  power_spectra.py  projected_maps.py
src/ksz_lae_xcorr/halos/: coeval_pipeline.py
src/ksz_lae_xcorr/io/: loaders.py
src/ksz_lae_xcorr/lightcone/: stitch.py  value_fields.py
src/ksz_lae_xcorr/plotting/: lightcone_panels.py  spectra_plots.py
src/ksz_lae_xcorr/snr/: cmb_filter.py  snr_forecast.py  survey_selection.py
src/ksz_lae_xcorr/tracers/: type_b_grids.py
src/ksz_lae_xcorr/utils/: config.py  constants.py  cosmology.py
tests/: test_config_and_correlation.py
